# RAG

./: cromadb.ipynb  embeddings.py  fetchdatafrom_cromadb.ipynb  rag.ipynb  rag_History_Aware_Conversational.ipynb  rag_conversation.ipynb  rag_inmemory.ipynb
agentic-ai-crash-course/agentic-ai-crash-course-main/agentic-ai-crashcourse-code/: .env.sample  README.md
agentic-ai-crash-course/agentic-ai-crash-course-main/agentic-ai-crashcourse-code/10_project_shopping_agent/: app.py  setup_db.py  store.db
agentic-ai-crash-course/agentic-ai-crash-course-main/agentic-ai-crashcourse-code/11_project_telecom_chatbot/: .env.example  .gitignore  app.py  ingest_faq.py  ingest_pdf.py  ingest_tickets.py  main.py  pyproject.toml  rag_chain.py  retriever.py
agentic-ai-crash-course/agentic-ai-crash-course-main/agentic-ai-crashcourse-code/1_simple_llm_calling/: call_llm.ipynb
agentic-ai-crash-course/agentic-ai-crash-course-main/agentic-ai-crashcourse-code/3_vector_db/: vector_db_basics.ipynb
agentic-ai-crash-course/agentic-ai-crash-course-main/agentic-ai-crashcourse-code/4_rag_basics/: rag_demo.ipynb
agentic-ai-crash-course/agentic-ai-crash-course-main/agentic-ai-crashcourse-code/5_single_agent/: product_query_agent.ipynb
agentic-ai-crash-course/agentic-ai-crash-course-main/agentic-ai-crashcourse-code/6_memory/: product_query_agent_with_memory.ipynb
agentic-ai-crash-course/exercise/: exercise.txt
agentic-ai-crash-course/extra/extra/: gemini_models_list.md  list_gemini_models.py
chroma_db/: chroma.sqlite3
notebook/: rag.ipynb  test.ipynb  tools.ipynb
(+4 files in other folders)
